# competitive-directory-automation

./: .envrc  .gitignore  README.md  file-tracker  file-tracker.service  file_tracker.py  pyproject.toml
